# dolly_lpt

./: .gitignore  GENAI_QUICKSTART.md  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  UV_USAGE.md  pyproject.toml
examples/: prompt_management_evaluation_example.py
genai_evaluation/: README.md  __init__.py  config.py  prompt_manager.py  rag_evaluator.py  requirements.txt  utils.py
